--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 .gradle
 .idea
 build
-**/src/**/*.txt
-**/src/**/*.input
-**/resources/**/*.txt
-!**/resources/**/test*.txt
+**/*.input
+**/*.txt
+!**/test*.txt
+!template/src/*
